--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "pino": "^9.7.0",
-    "pino-pretty":"13.0.0"
+    "pino-pretty":"13.0.0",
     "zod": "^4.0.2"
   }
 }
